tests/toylang/pos/000066_cdrc2.toylang
program a = { if a + a then if a then sleep; } .
