tests/toylang/neg/001142_mutation.toylang
program a = { if var a : bool then sleep; } .
